// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingScreen Snapshots matches snapshot of initial state 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#f5f3ef",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "borderBottomColor": "#c8ced0",
            "borderBottomWidth": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "maxWidth": 360,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#181b1b",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginBottom": 16,
                }
              }
            >
              Select a Category
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                accessibilityLabel="Friends & Family category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-friends-family"
              >
                <Text>
                  heart
                </Text>
              </View>
              <View
                accessibilityLabel="Community category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-community"
              >
                <Text>
                  globe
                </Text>
              </View>
              <View
                accessibilityLabel="Work category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-work"
              >
                <Text>
                  briefcase
                </Text>
              </View>
              <View
                accessibilityLabel="Goals & Hobbies category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-goals-hobbies"
              >
                <Text>
                  trophy
                </Text>
              </View>
              <View
                accessibilityLabel="Miscellaneous category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-miscellaneous"
              >
                <Text>
                  star
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#547fab",
                    "borderRadius": 8,
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  }
                }
              >
                <Text>
                  user-plus
                </Text>
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "600",
                    }
                  }
                >
                  Add
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#547fab",
                    "borderRadius": 8,
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  }
                }
              >
                <Text>
                  users
                </Text>
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "600",
                    }
                  }
                >
                  Party
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ece7df",
                  "borderColor": "#c8ced0",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "height": 44,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 44,
                }
              }
            >
              <Text>
                th
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`ListingScreen Snapshots matches snapshot with category selected 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#f5f3ef",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "borderBottomColor": "#c8ced0",
            "borderBottomWidth": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "maxWidth": 360,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#181b1b",
                  "fontSize": 22,
                  "fontWeight": "700",
                  "marginBottom": 16,
                }
              }
            >
              Friends & Family
            </Text>
            <View
              style={
                {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <View
                accessibilityLabel="Friends & Family category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": true,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    {
                      "backgroundColor": "#fbf8ea",
                      "borderColor": "#d4b82b",
                    },
                  ]
                }
                testID="category-button-friends-family"
              >
                <Text>
                  heart
                </Text>
              </View>
              <View
                accessibilityLabel="Community category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-community"
              >
                <Text>
                  globe
                </Text>
              </View>
              <View
                accessibilityLabel="Work category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-work"
              >
                <Text>
                  briefcase
                </Text>
              </View>
              <View
                accessibilityLabel="Goals & Hobbies category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-goals-hobbies"
              >
                <Text>
                  trophy
                </Text>
              </View>
              <View
                accessibilityLabel="Miscellaneous category"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "aspectRatio": 1,
                      "backgroundColor": "#ece7df",
                      "borderColor": "#c8ced0",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "width": "18%",
                    },
                    false,
                  ]
                }
                testID="category-button-miscellaneous"
              >
                <Text>
                  star
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#547fab",
                    "borderRadius": 8,
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  }
                }
              >
                <Text>
                  user-plus
                </Text>
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "600",
                    }
                  }
                >
                  Add
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#547fab",
                    "borderRadius": 8,
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  }
                }
              >
                <Text>
                  users
                </Text>
                <Text
                  style={
                    {
                      "color": "#fff",
                      "fontSize": 14,
                      "fontWeight": "600",
                    }
                  }
                >
                  Party
                </Text>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#ece7df",
                  "borderColor": "#c8ced0",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "height": 44,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 44,
                }
              }
            >
              <Text>
                th
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 16,
            "paddingVertical": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "paddingVertical": 20,
            }
          }
        >
          <Text
            style={
              {
                "color": "#778588",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            No contacts found
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "backgroundColor": "#ece7df",
        "borderTopColor": "#c8ced0",
        "borderTopWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#778588",
          "fontSize": 12,
          "fontWeight": "500",
        }
      }
    >
      0
       of 
      3
       visible
    </Text>
  </View>
</RCTSafeAreaView>
`;
